@@ -1,5 +1,10 @@
 2006-07-19  Yevgen Muntyan  <muntyan@tamu.edu>
 
+	* gtksourceview/gtksourcecontextengine.c: added a timer to
+	update_syntax().
+
+2006-07-19  Yevgen Muntyan  <muntyan@tamu.edu>
+
 	* autogen.sh: don't use --enable-gtk-doc by default.
 	* gtksourceview/gtksourcecontextengine.c: keep an invalid region
 	instead of invalidating tail of buffer.
